// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components: Tabs BasicUsage renders 1`] = `
<Fragment>
  <h2
    id="basic-usage"
  >
    Basic usage
  </h2>
  <p>
    Add class 
    <Property
      value=".tabs"
    />
     with a 
    <Property
      value=".tabs-horizontal-desired_size"
    />
     to a div containing an arrow icon along with 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;ul&gt;
    </PrismCode>
     and nest 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;li&gt;
    </PrismCode>
     as needed. The 
    <Property
      value=".tabs-horizontal-desired_size"
    />
     class determines when your tabs will switch from horizontal to collapsed. The available sizes can be found in our 
    <Link
      to="/docs/core/breakpoints"
    >
      breakpoints documentation
    </Link>
    .
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Tabs
      items={
        Array [
          "Card",
          "Discounts",
          "Transactions",
          "Invoice",
          "Settings",
          "Audit trail",
        ]
      }
      mode="xl"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Tabs Collapsed renders 1`] = `
<Fragment>
  <h2
    id="collapsed"
  >
    Collapsed
  </h2>
  <p>
    If no 
    <Property
      value=".tabs-horizontal-desired_size"
    />
     is provided then the tabs will always be in collapsed mode.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Tabs
      items={
        Array [
          "Card",
          "Discounts",
          "Transactions",
          "Invoice",
          "Settings",
          "Audit trail",
        ]
      }
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Tabs JavascriptMethods renders 1`] = `
<Fragment>
  <h2
    id="javascript-methods"
  >
    JavaScript methods
  </h2>
  <JavascriptDocs
    close={true}
    componentName="tabs"
    open={true}
  />
</Fragment>
`;

exports[`Components: Tabs renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    Use tabs to show which page or section that is active out of several options.
  </p>
  <BasicUsage />
  <Collapsed />
  <JavascriptMethods />
</DocContainer>
`;
